--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 Welcome! More coming soon.
+Hello, My name is Andrea Aranda. I've been enjoying the Miami sun since I was born. Currently majoring in graphic design at Miami International University of Art and Design.  
