--- a/index.html
+++ b/index.html
@@ -19,26 +19,44 @@
 		font-size: 60px;
 	}
 	
-	iframe { 
-		margin: auto;
-		width: 900px;
-	}
+	
 	
 	footer {
-		 margin: auto;
+		 text-align: center;
 	}
+	
+	nav a{
+		color: #ff0000;
+	}
+	
+	a{
+		text-decoration: none;
+		color: #FF0004;
+		text-decoration: underline
+			
+	}
+	
+	body {
+		font-family: 'Kalam', cursive;
+		color:#F86502;
+	}
+	
 	</style>
 <body>
+<nav>
+	<a href="index.html">Home</a> | <a href="gallery.html">Gallery</a> | <a href="Portfolio.html">Portfolio</a> | <a href="Contact2.html">Contact</a>
+</nav>
+<h1>Made in Dade</h1>
 
-<h1>Made  in Dade</h1>
 
-<!-- SnapWidget -->
-<script src="https://snapwidget.com/js/snapwidget.js"></script>
-<iframe src="https://snapwidget.com/embed/391852" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
 
-<!-- SnapWidget -->
-<iframe src="https://snapwidget.com/embed/392013" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:500px; height:100px"></iframe>
+<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FAndrea-Aranda-427987414261013%2F&tabs=timeline&width=500&height=300&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 
+<p>We specialize in bringing our clients anything local. From flyers and logos to clothing lines and photogrophy featuring the beauty and diversity of Miami, our designs are something our homegrown clients will appreciate.</p>
+<footer>
+<a href="https://www.instagram.com/dredollas/">Instagram</a>
+<a href="https://www.facebook.com/andrea.d.aranda">Facebook</a>
+<a href="https://www.linkedin.com/in/andrea-aranda-761057120/">LinkedIn</a>
 </body>
 
 <footer>
