--- a/Contact2.html
+++ b/Contact2.html
@@ -3,10 +3,47 @@
 <head>
 <meta charset="utf-8">
 <title>Contact2</title>
+<link href="https://fonts.googleapis.com/css?family=Kalam|Lato" rel="stylesheet">
 </head>
 
-<body>
+<style>
+		html{
+		background-color:#D0C2C3;
+		text-align:center;
+	}
 	
+	
+	nav a{
+		color: #ff0000;
+	}
+	
+	a{
+		text-decoration: none;
+		color: #FF0004;
+		text-decoration: underline;
+			
+	}
+	
+	
+	body {
+		font-family: 'Kalam', cursive;
+		color:#F86502;
+	}
+	
+	h1 {
+		color:#FC0303;
+		font-family: 'Kalam', cursive;
+		text-align: center;
+		font-size: 60px;
+	}
+	</style>
+
+<body>
+	<nav>
+	<a href="index.html">Home</a> | <a href="about.html">About</a> | <a href="gallery.html">Gallery</a> | <a href="Portfolio.html">Portfolio</a> | <a href="Contact2.html">Contact</a> 
+</nav>
+	
+<h1>Contact Me Here!</h1>
 	<div id="wufoo-z1cugp421jo0yy0">
 Fill out my <a href="https://aranda1822.wufoo.com/forms/z1cugp421jo0yy0">online form</a>.
 </div>
@@ -28,8 +65,8 @@ try { z1cugp421jo0yy0 = new WufooForm();z1cugp421jo0yy0.initialize(options);z1cu
 var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
 })(document, 'script');</script>
 
-
-
+<hr>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3592.418135684251!2d-80.1915166853912!3d25.789775983624015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9b6a7ae02c401%3A0xb7233c9b8fd9e5f5!2s1500+Biscayne+Blvd%2C+Miami%2C+FL+33132!5e0!3m2!1sen!2sus!4v1497288269306" width="400" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
 	
 </body>
 </html>
