--- a/Portfolio.html
+++ b/Portfolio.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>My Portfolio</title>
 <link href="https://fonts.googleapis.com/css?family=Kalam|Lato" rel="stylesheet">
 </head>
 
@@ -27,9 +27,31 @@
 	footer {
 		 margin: auto;
 	}
+	
+	body{
+		font-family: 'Kalam', cursive;
+		color:#F86502;
+		text-align: center;
+		
+		
+	}
+	
+	a{
+		text-decoration: none;
+		color: #FF0004
+			
+	}
+	
+	nav a{
+		color:#ff0000;
+	}
 	</style>
 <body>
-
+<nav>
+	<a href="index.html">Home</a> | <a href="about.html">About</a> | <a href="gallery.html">Gallery</a> | <a href="Portfolio.html">Portfolio</a> | <a href="Contact2.html">Contact</a> 
+	</nav>
+	
+	
 <h1>My Portfolio</h1>
 
 <iframe style="width:100%; height:291px;" src="http://e.issuu.com/embed.html#29946145/49714093" frameborder="0" allowfullscreen></iframe>
