--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>My Gallery</title>
 <link href="https://fonts.googleapis.com/css?family=Kalam|Lato" rel="stylesheet">
 
 <style>
@@ -35,10 +35,29 @@
 		color:#FC0303;
 	}
 
+	nav a{
+		color: #ff0000;
+	}
+	
+	a{
+		text-decoration: none;
+		color: #FF0004;
+		text-decoration: underline;
+			
+	}
+	
+	
+	body {
+		font-family: 'Kalam', cursive;
+		color:#F86502;
+	}
 	</style>
 </head>
 
 <body>
+<nav>
+	<a href="index.html">Home</a> | <a href="about.html">About</a> | <a href="gallery.html">Gallery</a> | <a href="Portfolio.html">Portfolio</a> | <a href="Contact2.html">Contact</a>
+	</nav>
 
 
 	<h1>My Art</h1>
