--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Index</title>
 <link href="https://fonts.googleapis.com/css?family=Kalam|Lato" rel="stylesheet">
 </head>
 
@@ -32,9 +32,10 @@
 	a{
 		text-decoration: none;
 		color: #FF0004;
-		text-decoration: underline
+		text-decoration: underline;
 			
 	}
+	
 	
 	body {
 		font-family: 'Kalam', cursive;
@@ -44,8 +45,13 @@
 	</style>
 <body>
 <nav>
-	<a href="index.html">Home</a> | <a href="gallery.html">Gallery</a> | <a href="Portfolio.html">Portfolio</a> | <a href="Contact2.html">Contact</a>
-</nav>
+	<a href="index.html">Home</a> | <a href="about.html">About</a> | <a href="gallery.html">Gallery</a> | <a href="Portfolio.html">Portfolio</a> | <a href="Contact2.html">Contact</a>
+	</nav>
+
+<a href="http://www.w3.org/html/logo/">
+<img src="https://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="165" height="64" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics">
+</a>
+
 <h1>Made in Dade</h1>
 
 
@@ -54,9 +60,7 @@
 
 <p>We specialize in bringing our clients anything local. From flyers and logos to clothing lines and photogrophy featuring the beauty and diversity of Miami, our designs are something our homegrown clients will appreciate.</p>
 <footer>
-<a href="https://www.instagram.com/dredollas/">Instagram</a>
-<a href="https://www.facebook.com/andrea.d.aranda">Facebook</a>
-<a href="https://www.linkedin.com/in/andrea-aranda-761057120/">LinkedIn</a>
+
 </body>
 
 <footer>
