--- a/gallery.html
+++ b/gallery.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
 <title>My Gallery</title>
 <link href="https://fonts.googleapis.com/css?family=Kalam|Lato" rel="stylesheet">
 
@@ -50,6 +51,11 @@
 	body {
 		font-family: 'Kalam', cursive;
 		color:#F86502;
+		font-size: 30px;
+	}
+	
+	nav {
+		font-size: 30px;
 	}
 	</style>
 </head>
@@ -63,24 +69,24 @@
 	<h1>My Art</h1>
 	<table>
 		<tr>
-			<td><img src="artwork/IMG_1148.JPG" alt="Giraffe" width="150" height="150">
+			<td><img src="IMG_1148.JPG" alt="Giraffe" width="150" height="150">
 			<br>Piece #1
 			</td>
-			<td><img src="artwork/IMG_1206.JPG" alt="Pattern Giraffe" width="150" height="150"</td>
-			<td><img src="artwork/IMG_2969.JPG" alt="Magazine Concept Ideas" widht="150" height="150"</td>
-			<td><img src="artwork/IMG_1077.JPG" alt="Boxes" width="150" height="150"</td>
+			<td><img src="IMG_1206.JPG" alt="Pattern Giraffe" width="150" height="150"</td>
+			<td><img src="IMG_2969.JPG" alt="Magazine Concept Ideas" widht="150" height="150"</td>
+			<td><img src="IMG_1077.JPG" alt="Boxes" width="150" height="150"</td>
 		</tr>
 		<tr>
-		    <td><img src="artwork/IMG_1061.JPG" alt="Aliens" width="150" height="150"</td>
-			<td><img src="artwork/IMG_1102.JPG" alt="Abstract1" width="150" height="150"</td>
-			<td><img src="artwork/IMG_1103.JPG" alt="Abstract2" width="150" height="150"</td>
-			<td><img src="artwork/IMG_1060.JPG" alt="Wine Bottle" width="150" height="150"</td>
+		    <td><img src="warmALIENS-(2).jpg" alt="Aliens" width="150" height="150"</td>
+			<td><img src="IMG_1102.JPG" alt="Abstract1" width="150" height="150"</td>
+			<td><img src="IMG_1103.JPG" alt="Abstract2" width="150" height="150"</td>
+			<td><img src="IMG_1060.JPG" alt="Wine Bottle" width="150" height="150"</td>
 			</tr>
 		<tr>
-			<td><img src="artwork/IMG_1061.JPG" alt="Cylinder" width="150" height="150"</td>
-			<td><img src="artwork/IMG_2968.JPG" alt="Logo Concepts" width="150" height="150"</td>
-			<td><img src="artwork/IMG_1400.JPG" alt="Logo Sketch" width="150" height="150"</td>
-			<td><img src="artwork/IMG_2988.JPG" alt="Miami Munchies Concept" width="150" height="150"</td>
+			<td><img src="IMG_1061.JPG" alt="Cylinder" width="150" height="150"</td>
+			<td><img src="B&RLOGOS (2)_Page_1.jpg" alt="Logo Concepts" width="150" height="150"</td>
+			<td><img src="IMG_1400.JPG" alt="Logo Sketch" width="150" height="150"</td>
+			<td><img src="IMG_2988.JPG" alt="Miami Munchies Concept" width="150" height="150"</td>
 			
 		</tr>
 	</table>
