--- a/Contact2.html
+++ b/Contact2.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
 <title>Contact2</title>
 <link href="https://fonts.googleapis.com/css?family=Kalam|Lato" rel="stylesheet">
 </head>
@@ -28,6 +29,7 @@
 	body {
 		font-family: 'Kalam', cursive;
 		color:#F86502;
+		font-size: 30px;
 	}
 	
 	h1 {
