--- a/Portfolio.html
+++ b/Portfolio.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
 <title>My Portfolio</title>
 <link href="https://fonts.googleapis.com/css?family=Kalam|Lato" rel="stylesheet">
 </head>
@@ -32,7 +33,7 @@
 		font-family: 'Kalam', cursive;
 		color:#F86502;
 		text-align: center;
-		
+		font-size: 30px;
 		
 	}
 	
