--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
 <link href="https://fonts.googleapis.com/css?family=Kalam|Lato" rel="stylesheet">
 <title>About Me</title>
 
@@ -22,13 +23,14 @@
 	}
 	
 	h2 {
-		text-align: justify;
+		font-size: 40px;
 	}
 	
 	h4{
 		text-align: center;
 		color: #b8b894;
 		font-family: 'Exo 2', sans-serif;
+		font-size: 30px;
 	}
 	body{
 		font-family: 'Kalam', cursive;
@@ -50,9 +52,13 @@
 	
 	ul, li {
 		
-		text-align:justify;
+		text-align:center;
+		font-size: 30px;
 	}
 	
+	p {
+		font-size: 30px;
+	}
 </style>
 </head>
 
