--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
 <title>Index</title>
 <link href="https://fonts.googleapis.com/css?family=Kalam|Lato" rel="stylesheet">
 </head>
@@ -40,7 +41,9 @@
 	body {
 		font-family: 'Kalam', cursive;
 		color:#F86502;
+	font-size: 30px;
 	}
+	
 	
 	</style>
 <body>
